Date Popup Authored Module 7.x

Date Popup Authored 7.x-1.2-beta1
---------------------------------
#2329773 by amagdy, Mark Trapp: Clean up variables when no longer in use
#2051921 by pfrenssen: Warning: strtotime() expects parameter 1 to be string, array given in strtotime
#2275593 by goodboy: Use date_format_short for default value.
#1087616 by Mark Trapp: Date Popup Authored does not play nice when $form['authored']['#access'] is modified too late

Date Popup Authored 7.x-1.1
---------------------------
Stable release to coincide with stable release of Date.

Date Popup Authored 7.x-1.1-beta2
-------------------------------
#1087616 by Mark Trapp: Post date resets on save if user can't administer nodes

Date Popup Authored 7.x-1.1-beta1
-------------------------------
#1012288 by pillarsdotnet: Make Date Popup Authored work in PHP 5.2

Date Popup Authored 7.x-1.1-alpha4
-------------------------------
#995934 by Mark Trapp: Date Popup Authored needs tests
#995060 by pillarsdotnet: Date Popup Authored assumes date is a DateObject, shouldn't

Date Popup Authored 7.x-1.1-alpha3
----------------------------------
#970622 by Mark Trapp: Saving a node with Date Popup Authored enabled will result in published time drift

Date Popup Authored 7.x-1.1-alpha2
----------------------------------
#970406 by Mark Trapp: Creating a new node with Date Popup Authored enabled results in a White Screen of Death

Date Popup Authored 7.x-1.1-alpha1
----------------------------------
Initial unstable release of the Drupal 7 port.